# clips-extractor

./: .gitignore  README.md  config.example.json  config.py  main.py  models.py  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-v1.1-ux/: SUMMARY.md
.planning/phases/05-dark-ui-overhaul/: 05-01-PLAN.md
.planning/phases/08-queue-clips-while-downloading-choose-videos-from-local-files/: 08-01-PLAN.md  08-02-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
clips/: armbar.json
extension/: README.md  manifest.json
extension/background/: service-worker.js
extension/content/: content.js  overlay.css
extension/lib/: markers.js  recording.js
extension/popup/: popup.html  popup.js
routers/: cache.py  clips.py  config.py  download.py  extension.py  instructional.py
services/: bilibili_cookies.py  browser_recording.py  cache.py  clip.py  clip_queue.py  download.py  extract_clip.py  session.py  url_parse.py
static/: index.html
tests/: conftest.py  test_bilibili_cookies.py  test_bilibili_download.py  test_browser_recording.py  test_cache.py  test_clip.py  test_config.py  test_cookie_errors.py  test_download_proxy.py  test_main.py  test_routers_config.py  test_session.py  test_url_parse.py
